- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll
- Android: Fixed rare NPE when `onDestroy` was called

[1.13.1]
- [BREAKING CHANGE] Android: Since 1.13.0 libGDX requires setting `android.useAndroidX=true` in your gradle.properties file. In 1.13.1 it is NO longer needed to define the `androidx.core:core` dependency in your Android module.
- iOS: Update to MobiVM 2.3.22
- iOS: Fixes Gdx.openURI() not working on iOS 18.1 Simulator.
- Change visibility of PolygonSpriteBatch.switchTexture() to protected
- Added XmlReader.getChildren() and XmlReader.replaceChild()
- LWJGL3: Fix pauseWhenLostFocus not working as expected
- LWJGL 3: Downgrade to 3.3.3 due to AV false positives on 3.3.4 and OpenAL log spamming issue on 3.3.5.
- API Addition: Added FPSLogger#setBound
- Android: Fix crash on startup if `setContentView` was manually called after `initializeForView`
- API Addition: Added Array#replaceFirst and Array#replaceAll
- Fixed ShortArray#lastIndexOf taking char instead of short.
- Properly validate font name in Hiero
- Fix depth shader recycling
- Support 'class' Tiled/Tmx MapProperty
- Support for Layer TintColor in TiledMap
- Fix classpath files not being loaded on GWT
- Fixed LongArray#lastIndexOf taking char instead of long.
- LongArray#pop and #peek now throw expections if the array is empty
- Reset existing transformations of provided overlap Polygon in Polygon::intersectPolygons
- Added tiledmap loader for JSON files
- Fix duplicate points returned in polygon intersection
- Change defaults of SpriteBatch to use VBO instead of VertexArray on gl2/gles2.0
- Fix: no longer inline the version string
- GWT - Calculate MD5 hash while copying file to avoid errors on very large files
- Fix: Wayland doesn't support setting window position and icon
- Fix: Parsing imagelayer inside a group tag in TMX file
- Improve Android input keyboard with autocorrection
- Unproject and pick ray docs for Viewport/Camera